# gpt3api

./: CHANGELOG.md  README.md  pyproject.toml
src/: main.py  openaiapi.py  settings.py  test.json
