
[tool.poetry]
name = "gpt3"
version = "0.1.0"
description = ""
authors = ["Martin Højland <molheh@nuuday.dk>"]

[tool.poetry.dependencies]
python = "^3.8"
jmespath = "^0.10.0"
openai = "^0.4.0"
pandas = "^1.1.4"
numpy = "^1.19.4"
pydantic = "^1.7.2"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
jupyterlab = "^2.2.9"
ipykernel = "^5.3.4"
pylint = "^2.6.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov --cov-report=xml:cov.xml --black"